docs: 배포문서 오타 수정

--- a/exec/[20220812]배포 문서.md
+++ b/exec/[20220812]배포 문서.md
@@ -9,20 +9,21 @@ back-end: Java, Spring boot, JPA, Openvidu, gradle, Docker, NginX, Jenkins
 |기술 스택|버전|
 |--|--|
 NodeJS|16.6.0|
-react|18.2.0|
+React|18.2.0|
 Openvidu|2.22.0|
 OpenJDK|1.8.0_192|
 Spring boot|2.4.5|
-querydsl|4.4.0|
+QueryDSL|4.4.0|
 Docker|20.10.17|
 NginX|1.18.0|
 Jenkins|2.346|
-gradle|6.9|
+Gradle|6.9|
 
 
 
 <details>
-<summary span style="font-size:20px">frontend 배포</summary>
+<summary span style="font-size:20px">Frontend 배포</summary>
+
 
 ## frontend
 
@@ -37,9 +38,11 @@ npm start
 
 ## 빌드 및 배포
 
-Dockerfile을 사용하여 Nginx와 react를 함께 배포합니다.
+Dockerfile을 작성하여 Nginx와 react를 함께 배포합니다.
 프로젝트내의 frontend 디렉토리의 루트 경로에서 다음 명령어를 실행합니다.
 
+
+S07P12E103/frontend/Dockerfile
 ```
 # Dockerfile
 
@@ -92,6 +95,7 @@ docker run --name smnd_front -d -p 3000:80 smnd_front:0.1
 
 <details>
 <summary span style="font-size:20px">backend 배포</summary>
+
 ## Backend
 
 
@@ -101,7 +105,7 @@ build 결과물 얻기
 
 
 ```
-gic clone https://lab.ssafy.com/s07-webmobile1-sub2/S07P12E103.git
+git clone https://lab.ssafy.com/s07-webmobile1-sub2/S07P12E103.git
 cd S07P12E103/backend
 ```
 
@@ -144,6 +148,7 @@ docker run --name smnd_back -p 8081:8080 smnd_back:0.1
 
 <details>
 <summary span style="font-size:20px">Nginx 설정과 SSL 설정 </summary>
+
 ## SSL 설정
 
 ### 배포 **Nginx 설정과 ssl 인증서 발급 및 적용**
