docs: 도움말 추가

--- a/exec/시연 시나리오.md
+++ b/exec/시연 시나리오.md
@@ -57,3 +57,12 @@
 
 ![image](https://user-images.githubusercontent.com/51036842/185532791-0e8b9e35-3db0-464b-aea7-ffb3c4b25a38.png)
 
+
+도움말 페이지로 가면 도움말을 볼 수 있습니다.
+
+![image](https://user-images.githubusercontent.com/51036842/185533163-aac2d7ea-23c3-4597-89a2-16d36c855dfa.png)
+
+![image](https://user-images.githubusercontent.com/51036842/185533195-e0dd67f4-63aa-4a21-abb6-5e9ff225df13.png)
+
+
+이상 세모나라였습니다.
