docs: 시연시나리오 마무리

--- a/exec/시연 시나리오.md
+++ b/exec/시연 시나리오.md
@@ -65,4 +65,4 @@
 ![image](https://user-images.githubusercontent.com/51036842/185533195-e0dd67f4-63aa-4a21-abb6-5e9ff225df13.png)
 
 
-이상 세모나라였습니다.
+이상 세모나라 시연 시나리입니다.
